--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     
-    
+    <div class="quote-box">
+        <h2>Quote of the day</h2>
+        <blockquote>Loading...</blockquote>
+        <span>Loading...</span>
+    </div>
 
 </body>
 </html>
