--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <span>Loading...</span>
         <div>
             <button>New Quote</button>
-            <button>Tweet</button>
+            <button><img src="tt.png">Tweet</button>
         </div>
     </div>
 
