--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <span id="author">Loading...</span>
         <div>
             <button onclick="getquote(api_url)">New Quote</button>
-            <button><img src="tt.png">Tweet</button>
+            <button onclick="tweet()"><img src="tt.png">Tweet</button>
         </div>
     </div>
 
